--- a/AutoKeras.ipynb
+++ b/AutoKeras.ipynb
@@ -26,14 +26,15 @@
         "colab_type": "text",
         "id": "Bi3ac-vwyInD"
       },
-      "outputs": [],
       "source": [
-        "# AutoKeras\n",
+        "# AutoKeras (0.4)\n",
         "This notebook contains the experiments with autokeras, analyzing the quality and performance of the generated models and comparing them to handcrafted ones.\n",
         "\n",
         "Main questions:\n",
         "*   What does the structure of the generated networks look like?\n",
-        "*   How is the quality compared to handmade nets?"
+        "*   How is the quality compared to handmade nets?\n",
+        "\n",
+        "\"Auto-Keras is an open source software library for automated machine learning (AutoML). It is developed by DATA Lab at Texas A&M University and community contributors. The ultimate goal of AutoML is to provide easily accessible deep learning tools to domain experts with limited data science or machine learning background. Auto-Keras provides functions to automatically search for architecture and hyperparameters of deep learning models.\" - autokeras.com"
       ]
     },
     {
@@ -42,205 +43,425 @@
         "colab_type": "text",
         "id": "6mxv9oNAzBCH"
       },
-      "outputs": [],
       "source": [
         "## Packages and Imports\n",
         "The following section contains the packages that need to be installed and imported.\n",
         "\n",
-        "In google colabs you have to restart the environment after installing the packages."
+        "In google colab you have to **restart the environment** after installing the packages."
       ]
     },
     {
       "cell_type": "code",
+      "metadata": {
+        "id": "esul44Nf4ss6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip install autokeras==0.4.0 # Version 0.4"
+      ],
       "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
-        "colab": {},
+        "id": "DEU16-WIWYvd",
         "colab_type": "code",
-        "id": "iY8ELHke3uYV"
+        "colab": {}
       },
-      "outputs": [],
       "source": [
-        "!pip install autokeras # Version 0.4\n",
         "!pip install graphviz # For model visualization"
-      ]
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "colab_type": "code",
-        "id": "49OxVZOQvhIn",
-        "outputId": "e3cddf6c-d1c1-4dd9-e531-e534158246cb"
-      },
-      "outputs": [],
-      "source": [
-        "import autokeras as ak\n",
-        "import keras\n",
-        "from autokeras.image.image_supervised import ImageClassifier"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
         "colab_type": "code",
         "id": "LAbrvCgDvpj1",
-        "outputId": "d9aaa462-8780-4ec4-caa7-1e04d751835a"
+        "colab": {}
       },
-      "outputs": [],
       "source": [
         "!python -V # Should output 3.6.* to work"
-      ]
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
         "colab_type": "code",
-        "id": "KWmF0hcBvp_U",
-        "outputId": "75ea92b1-2210-4ae7-87d4-5d3e5b39d0fd"
+        "id": "ojYaKiCp4UYA",
+        "colab": {}
       },
-      "outputs": [],
       "source": [
-        "!pip list # Should contain autokeras and keras at least"
-      ]
+        "import autokeras as ak\n",
+        "from autokeras.image.image_supervised import ImageClassifier\n",
+        "from autokeras.utils import pickle_from_file\n",
+        "import keras\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from sklearn.datasets import load_breast_cancer, load_diabetes\n",
+        "from keras.datasets import mnist\n",
+        "from sklearn.model_selection import train_test_split"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "k-fSBOL9zr_G"
+        "id": "PdB6pKeJ4UYE"
       },
-      "outputs": [],
       "source": [
-        "## Data sets\n",
-        "We now need to import data sets where the models to be compared are trained on."
+        "## MNIST"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RhV5o2KlzOPq",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Load data set"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
         "colab_type": "code",
-        "id": "Oh5lS3ubvbPh",
-        "outputId": "f1905a28-06d4-4a1f-fef1-0fa280fd17ab"
+        "id": "uors7eXJ4UYG",
+        "colab": {}
       },
-      "outputs": [],
       "source": [
-        "# Load MNIST\n",
-        "from keras.datasets import mnist\n",
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
         "x_train = x_train.reshape(x_train.shape + (1,))\n",
         "x_test = x_test.reshape(x_test.shape + (1,))"
-      ]
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "oBwMJAfR0BI2"
+        "id": "elEnZo_HzWMa",
+        "colab_type": "text"
       },
-      "outputs": [],
       "source": [
-        "## Create AutoKeras model"
+        "### Create AutoKeras model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 601
-        },
+        "id": "vu4OSSrizeb1",
         "colab_type": "code",
-        "id": "oJmxgl67vbPj",
-        "outputId": "84731cad-a3b8-4fda-8637-e0c2a4eb5d61"
+        "colab": {}
       },
-      "outputs": [],
       "source": [
-        "# Search and train the classifier.\n",
         "clf = ImageClassifier(verbose=True)\n",
         "clf.fit(x_train, y_train, time_limit=12 * 60 * 60)\n",
         "clf.final_fit(x_train, y_train, x_test, y_test, retrain=True)\n",
         "y = clf.evaluate(x_test, y_test)\n",
         "print(y)"
-      ]
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "sS4sBlFK2BGo"
+        "id": "awrXsQ_w5lOp"
       },
-      "outputs": [],
       "source": [
-        "## Export model"
+        "### Evaluate"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 0,
       "metadata": {
-        "colab": {},
         "colab_type": "code",
-        "id": "CLO7Ugft2DZA"
+        "id": "wmVhwxmi5lO8",
+        "colab": {}
       },
-      "outputs": [],
       "source": [
-        "clf.export_autokeras_model(\"test_model.h5\")"
-      ]
+        "print(clf.evaluate(x_test, y_test))"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "8uw9rZQD2Otf"
+        "id": "LaaDC7eZ5lPB"
       },
-      "outputs": [],
       "source": [
-        "## Load Model"
+        "### Export model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 0,
       "metadata": {
-        "colab": {},
         "colab_type": "code",
-        "id": "MrJwyzwG2MXp"
+        "id": "e4rzzFpj5lPC",
+        "colab": {}
       },
-      "outputs": [],
       "source": [
-        "from autokeras.utils import pickle_from_file\n",
-        "model = pickle_from_file(\"test_model.h5\")\n",
+        "clf.export_autokeras_model(\"mnist.pkl\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "R0evIbZC5lPG"
+      },
+      "source": [
+        "### Load Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "Q96TI3qB5lPH",
+        "colab": {}
+      },
+      "source": [
+        "model = pickle_from_file(\"mnist.pkl\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "BzTDrQxs5lPJ",
+        "colab": {}
+      },
+      "source": [
         "results = model.evaluate(x_test, y_test)\n",
         "print(results)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xSBvHYo8paA_",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Breast Cancer"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "7VdLX7la1UCo"
+        "id": "CSsdJ6dqyWct",
+        "colab_type": "text"
       },
-      "outputs": [],
+      "source": [
+        "### Load data set"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jmFRpBnweJKx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X, y = load_breast_cancer(return_X_y=True)\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.15)\n",
+        "x_train = x_train.reshape(x_train.shape + (1,))\n",
+        "x_test = x_test.reshape(x_test.shape + (1,))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "_RzpmUvo4UYU"
+      },
+      "source": [
+        "### Create AutoKeras model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "9Nd-wKjU4UYV",
+        "colab": {}
+      },
+      "source": [
+        "clf = ImageClassifier(verbose=True)\n",
+        "clf.fit(x_train, y_train, time_limit=12 * 60 * 60)\n",
+        "clf.final_fit(x_train, y_train, x_test, y_test, retrain=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pLrekzlk0uzz",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Evaluate"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T6Zn3_n70-2i",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(clf.evaluate(x_test, y_test))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "fEijW2IK4UYe"
+      },
+      "source": [
+        "### Export model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "-8-yWj0D4UYf",
+        "colab": {}
+      },
+      "source": [
+        "clf.export_autokeras_model(\"breast_cancer.pkl\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "VbpMWOFS4UYj"
+      },
+      "source": [
+        "### Load Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "x3kJkMGJ4UYk",
+        "colab": {}
+      },
+      "source": [
+        "model = pickle_from_file(\"breast_cancer.pkl\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "de14Dj-O2sgx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "results = model.evaluate(x_test, y_test)\n",
+        "print(results)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Fh8RjakbaUyM",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Visualize\n",
+        "The Cells below don't work yet!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5CxFb1fQaT4m",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "clf = ImageClassifier(path=\"./\", verbose=True, augment=False) # Give a custom path of your choice\n",
+        "clf.fit(x_train, y_train, time_limit=30 * 60)\n",
+        "clf.final_fit(x_train, y_train, x_test, y_test, retrain=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "agH1PMTge_cD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plot_model(model, show_shapes=True, show_layer_names=True, to_file='model.png')\n",
+        "from IPython.display import Image\n",
+        "Image(retina=True, filename='model.png')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GDObeUQUgJhE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras.utils import plot_model\n",
+        "from keras.models import load_model\n",
+        "model = load_model('test_model.h5')\n",
+        "plot_model(model, to_file='model.png')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "-quWTtdN4UY7"
+      },
       "source": [
         "## References\n",
         "https://autokeras.com/"
