Update Pipeline structure

--- a/AutoKeras.ipynb
+++ b/AutoKeras.ipynb
@@ -28,13 +28,13 @@
       },
       "source": [
         "# AutoKeras (0.4)\n",
-        "This notebook contains the experiments with autokeras, analyzing the quality and performance of the generated models and comparing them to handcrafted ones.\n",
+        "This notebook contains the experiments with AutoKeras, analyzing the quality and performance of the generated models and comparing them to handcrafted ones.\n",
         "\n",
         "Main questions:\n",
         "*   What does the structure of the generated networks look like?\n",
         "*   How is the quality compared to handmade nets?\n",
         "\n",
-        "\"Auto-Keras is an open source software library for automated machine learning (AutoML). It is developed by DATA Lab at Texas A&M University and community contributors. The ultimate goal of AutoML is to provide easily accessible deep learning tools to domain experts with limited data science or machine learning background. Auto-Keras provides functions to automatically search for architecture and hyperparameters of deep learning models.\" - autokeras.com"
+        "\"Auto-Keras is an open source software library for automated machine learning (AutoML). It is developed by DATA Lab at Texas A&M University and community contributors. The ultimate goal of AutoML is to provide easily accessible deep learning tools to domain experts with limited data science or machine learning background. Auto-Keras provides functions to automatically search for architecture and hyperparameters of deep learning models.\" - *autokeras.com*"
       ]
     },
     {
@@ -66,12 +66,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DEU16-WIWYvd",
+        "id": "xFTC2lcBRqrH",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "!pip install graphviz # For model visualization"
+        "!pip install torchviz # For model visualization"
       ],
       "execution_count": 0,
       "outputs": []
@@ -100,15 +100,26 @@
         "import autokeras as ak\n",
         "from autokeras.image.image_supervised import ImageClassifier\n",
         "from autokeras.utils import pickle_from_file\n",
-        "import keras\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "from sklearn.datasets import load_breast_cancer, load_diabetes\n",
-        "from keras.datasets import mnist\n",
-        "from sklearn.model_selection import train_test_split"
+        "from sklearn.model_selection import train_test_split\n",
+        "from torchviz import make_dot\n",
+        "import torch\n",
+        "from google.colab import files"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "noHgWmt5URPr",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Load data set\n",
+        "In the following sections you can load the data set you are going to use to test AutoKeras. The training data is contained in `x_train` and `y_train`, while the test data is in `x_test` and `y_test`."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -117,17 +128,7 @@
         "id": "PdB6pKeJ4UYE"
       },
       "source": [
-        "## MNIST"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RhV5o2KlzOPq",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Load data set"
+        "### MNIST"
       ]
     },
     {
@@ -138,119 +139,11 @@
         "colab": {}
       },
       "source": [
+        "from keras.datasets import mnist\n",
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
         "x_train = x_train.reshape(x_train.shape + (1,))\n",
-        "x_test = x_test.reshape(x_test.shape + (1,))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "elEnZo_HzWMa",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Create AutoKeras model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vu4OSSrizeb1",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "clf = ImageClassifier(verbose=True)\n",
-        "clf.fit(x_train, y_train, time_limit=12 * 60 * 60)\n",
-        "clf.final_fit(x_train, y_train, x_test, y_test, retrain=True)\n",
-        "y = clf.evaluate(x_test, y_test)\n",
-        "print(y)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "awrXsQ_w5lOp"
-      },
-      "source": [
-        "### Evaluate"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "wmVhwxmi5lO8",
-        "colab": {}
-      },
-      "source": [
-        "print(clf.evaluate(x_test, y_test))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "LaaDC7eZ5lPB"
-      },
-      "source": [
-        "### Export model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "e4rzzFpj5lPC",
-        "colab": {}
-      },
-      "source": [
-        "clf.export_autokeras_model(\"mnist.pkl\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "R0evIbZC5lPG"
-      },
-      "source": [
-        "### Load Model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "Q96TI3qB5lPH",
-        "colab": {}
-      },
-      "source": [
-        "model = pickle_from_file(\"mnist.pkl\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "BzTDrQxs5lPJ",
-        "colab": {}
-      },
-      "source": [
-        "results = model.evaluate(x_test, y_test)\n",
-        "print(results)"
+        "x_test = x_test.reshape(x_test.shape + (1,))\n",
+        "data_set_name = \"mnist\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -262,17 +155,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Breast Cancer"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "CSsdJ6dqyWct",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Load data set"
+        "### Breast Cancer"
       ]
     },
     {
@@ -283,10 +166,12 @@
         "colab": {}
       },
       "source": [
+        "from sklearn.datasets import load_breast_cancer\n",
         "X, y = load_breast_cancer(return_X_y=True)\n",
         "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.15)\n",
         "x_train = x_train.reshape(x_train.shape + (1,))\n",
-        "x_test = x_test.reshape(x_test.shape + (1,))"
+        "x_test = x_test.reshape(x_test.shape + (1,))\n",
+        "data_set_name = \"breast_cancer\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -298,7 +183,7 @@
         "id": "_RzpmUvo4UYU"
       },
       "source": [
-        "### Create AutoKeras model"
+        "## Create AutoKeras model"
       ]
     },
     {
@@ -309,32 +194,10 @@
         "colab": {}
       },
       "source": [
-        "clf = ImageClassifier(verbose=True)\n",
-        "clf.fit(x_train, y_train, time_limit=12 * 60 * 60)\n",
+        "%tensorflow_version 1.x\n",
+        "clf = ImageClassifier(verbose=True, augment=True)\n",
+        "clf.fit(x_train, y_train, time_limit=1 * 60 * 60) # 1 Hour\n",
         "clf.final_fit(x_train, y_train, x_test, y_test, retrain=True)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pLrekzlk0uzz",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Evaluate"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "T6Zn3_n70-2i",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(clf.evaluate(x_test, y_test))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -357,7 +220,21 @@
         "colab": {}
       },
       "source": [
-        "clf.export_autokeras_model(\"breast_cancer.pkl\")"
+        "clf.export_autokeras_model(data_set_name + \".pkl\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nQPuvLb8Xd67",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Download model\n",
+        "files.download(data_set_name + \".pkl\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -369,8 +246,22 @@
         "id": "VbpMWOFS4UYj"
       },
       "source": [
-        "### Load Model"
+        "### Load model"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O1njzIuiXncv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Upload model\n",
+        "files.upload()"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -380,21 +271,7 @@
         "colab": {}
       },
       "source": [
-        "model = pickle_from_file(\"breast_cancer.pkl\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "de14Dj-O2sgx",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "results = model.evaluate(x_test, y_test)\n",
-        "print(results)"
+        "clf = pickle_from_file(data_set_name + \".pkl\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -406,21 +283,20 @@
         "colab_type": "text"
       },
       "source": [
-        "## Visualize\n",
-        "The Cells below don't work yet!"
+        "## Visualize and Evaluate\n",
+        "The visualization is still an ugly workaround, but it works."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5CxFb1fQaT4m",
+        "id": "T6Zn3_n70-2i",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "clf = ImageClassifier(path=\"./\", verbose=True, augment=False) # Give a custom path of your choice\n",
-        "clf.fit(x_train, y_train, time_limit=30 * 60)\n",
-        "clf.final_fit(x_train, y_train, x_test, y_test, retrain=True)"
+        "# Evaluate model\n",
+        "print(clf.evaluate(x_test, y_test))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -428,14 +304,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "agH1PMTge_cD",
+        "id": "u71sI_hoZft7",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "plot_model(model, show_shapes=True, show_layer_names=True, to_file='model.png')\n",
-        "from IPython.display import Image\n",
-        "Image(retina=True, filename='model.png')"
+        "torch_model = clf.graph.produce_model() # For Portable models that got imported\n",
+        "#torch_model = clf.cnn.searcher.training_queue[-1][0].produce_model() # For models in the training queue"
       ],
       "execution_count": 0,
       "outputs": []
@@ -443,15 +318,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GDObeUQUgJhE",
+        "id": "Z5ZJRKaxzytw",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "from keras.utils import plot_model\n",
-        "from keras.models import load_model\n",
-        "model = load_model('test_model.h5')\n",
-        "plot_model(model, to_file='model.png')"
+        "x = torch.randn([64, 1, 2]).requires_grad_(True)\n",
+        "y = torch_model(x)\n",
+        "make_dot(y, params=dict(list(torch_model.named_parameters()) + [('x', x)])).render(data_set_name, view=True)  "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9UKZVjhx480k",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Download visualization as PDF\n",
+        "files.download(data_set_name + \".pdf\")"
       ],
       "execution_count": 0,
       "outputs": []
