Added Iris Dataset

--- a/AutoKeras.ipynb
+++ b/AutoKeras.ipynb
@@ -179,6 +179,34 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "A221MCQ5t52p",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Iris"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KEFud8mwt9Ab",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.datasets import load_iris\n",
+        "X, y = load_iris(return_X_y=True)\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.15)\n",
+        "x_train = x_train.reshape(x_train.shape + (1,))\n",
+        "x_test = x_test.reshape(x_test.shape + (1,))\n",
+        "data_set_name = \"iris\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "colab_type": "text",
         "id": "_RzpmUvo4UYU"
       },
