--- a/AutoKeras.ipynb
+++ b/AutoKeras.ipynb
@@ -27,7 +27,7 @@
         "id": "Bi3ac-vwyInD"
       },
       "source": [
-        "# AutoKeras (0.4)\n",
+        "# Auto-Keras (0.4)\n",
         "This notebook contains the experiments with AutoKeras, analyzing the quality and performance of the generated models and comparing them to handcrafted ones.\n",
         "\n",
         "Main questions:\n",
@@ -47,7 +47,7 @@
         "## Packages and Imports\n",
         "The following section contains the packages that need to be installed and imported.\n",
         "\n",
-        "In google colab you have to **restart the environment** after installing autokeras."
+        "Notice: In google colab you have to **restart the environment** after installing autokeras."
       ]
     },
     {
@@ -90,7 +90,6 @@
         "import keras\n",
         "import numpy as np\n",
         "from sklearn.model_selection import train_test_split\n",
-        "import torch\n",
         "from google.colab import files"
       ],
       "execution_count": 0,
@@ -104,8 +103,36 @@
       },
       "source": [
         "## Load data set\n",
-        "In the following sections you can load the data set you are going to use to test AutoKeras. The training data is contained in `x_train` and `y_train`, while the test data is in `x_test` and `y_test`."
+        "In the following sections you can load the data set you are going to use to test Auto-Keras. The training data is contained in `x_train` and `y_train`, while the test data is in `x_test` and `y_test`."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A221MCQ5t52p",
+        "colab_type": "text"
+      },
+      "source": [
+        "### [Iris](https://archive.ics.uci.edu/ml/datasets/iris)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KEFud8mwt9Ab",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.datasets import load_iris\n",
+        "X, y = load_iris(return_X_y=True)\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.15)\n",
+        "x_train = x_train.reshape(x_train.shape + (1,))\n",
+        "x_test = x_test.reshape(x_test.shape + (1,))\n",
+        "data_set_name = \"iris\""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -114,7 +141,7 @@
         "id": "PdB6pKeJ4UYE"
       },
       "source": [
-        "### MNIST"
+        "### [MNIST](http://yann.lecun.com/exdb/mnist/)"
       ]
     },
     {
@@ -141,7 +168,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Breast Cancer"
+        "### [Breast Cancer](https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic))\n"
       ]
     },
     {
@@ -165,39 +192,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "A221MCQ5t52p",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Iris"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KEFud8mwt9Ab",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from sklearn.datasets import load_iris\n",
-        "X, y = load_iris(return_X_y=True)\n",
-        "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.15)\n",
-        "x_train = x_train.reshape(x_train.shape + (1,))\n",
-        "x_test = x_test.reshape(x_test.shape + (1,))\n",
-        "data_set_name = \"iris\""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "colab_type": "text",
         "id": "_RzpmUvo4UYU"
       },
       "source": [
-        "## Create AutoKeras model"
+        "## Create Auto-Keras model\n",
+        "As the ImageClassifier is the only working classifier for version 0.4, it is used here for all data sets."
       ]
     },
     {
@@ -208,9 +208,9 @@
         "colab": {}
       },
       "source": [
+        "%%time\n",
         "%tensorflow_version 1.x\n",
-        "# ImageClassifier\n",
-        "clf = ImageClassifier(verbose=True, augment=True)\n",
+        "clf = ImageClassifier(verbose=True, augment=True, path=None, resume=False, searcher_args=None)\n",
         "clf.fit(x_train, y_train, time_limit=1 * 60 * 60) # 1 Hour\n",
         "clf.final_fit(x_train, y_train, x_test, y_test, retrain=False, trainer_args={'max_no_improvement_num': 5})"
       ],
@@ -224,7 +224,8 @@
         "id": "fEijW2IK4UYe"
       },
       "source": [
-        "### Export model"
+        "### Export model\n",
+        "You can export the model for later training."
       ]
     },
     {
@@ -261,7 +262,8 @@
         "id": "VbpMWOFS4UYj"
       },
       "source": [
-        "### Load model"
+        "### Load model\n",
+        "Note that when loading a model, the class of `clf` changes to `PortableImageSupervised`."
       ]
     },
     {
@@ -298,8 +300,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Create model for comparison\n",
-        "**Work in Progress**"
+        "## Create models for comparison"
       ]
     },
     {
@@ -327,35 +328,13 @@
         "model.add(Dense(128, activation='relu'))\n",
         "model.add(Dropout(0.5))\n",
         "model.add(Dense(10, activation='softmax'))\n",
-        "model.compile(optimizer=Adam(), loss=mean_squared_error)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rGZjFYhcXQkS",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "model.compile(optimizer=Adam(), loss=mean_squared_error)\n",
+        "\n",
         "model_log = model.fit(x_train, y_train,\n",
         "          batch_size=128,\n",
         "          epochs=10,\n",
-        "          verbose=1)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_QSMlQ_wXVE8",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "          verbose=1)\n",
+        "\n",
         "score = model.evaluate(x_test, y_test, verbose=0)\n",
         "print('Test loss:', score[0])\n",
         "print('Test accuracy:', score[1])"
@@ -371,7 +350,7 @@
       },
       "source": [
         "## Visualize and Evaluate\n",
-        "The visualization is still an ugly workaround, but it works."
+        "The visualization is an ugly workaround, but it works."
       ]
     },
     {
@@ -439,17 +418,6 @@
       },
       "source": [
         "Subsequently use [this website](https://lutzroeder.github.io/netron/) to visualize the model."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "-quWTtdN4UY7"
-      },
-      "source": [
-        "## References\n",
-        "https://autokeras.com/"
       ]
     }
   ]
